--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+
+
   <link rel="stylesheet" href="./CSS/style.css">
   <title>Bootsrap-Portfolio-Ioana-Iosub</title>
 </head>
 
 <body>
+  <!--Nav-Bar-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
     <a class="navbar-brand" href="#"> <span class="name ps-5">Ioana Iosub</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -33,6 +36,92 @@
 
     </div>
   </nav>
+
+  <!-- Hero - Jumbotron -->
+  <header class="jumbotron pt-3">
+    <h2>Hello!</h2>
+    <p class="lead display-4"> I'm Ioana Iosub</p>
+    <img src="./images/ioana2.jpg" class="rounded float-right" alt="...">
+    <p class="pt-3">Front-End Developer based in London, UK.</p>
+    <a class="btn btn-secondary btn-lg" href="#contact-me" role="button">Contact-Me</a>
+    <hr class="my-4">
+  </header>
+
+  <!--About-Me-->
+
+  <section id="about-me">
+    <h2>About-Me</h2>
+
+
+  </section>
+
+  <!--Work-->
+  <section id="projects">
+    <h2>Work</h2>
+
+    <!-- My Projects -->
+    <div class="row mb-3 text themed-grid-col work p-5">
+      <div class="col-lg-12 col-md-12 col-sm-12 themed-grid-col d-flex justify-content-center">
+
+        <!--  First Project -->
+        <div class="card shadow">
+          <img src="./images/my-weather-app.jpeg" class="card-img-top" alt="Weather-App">
+          <div class="card-body  p-4 project-1">
+            <h2 class="card-title body text-light">Weather App</h2>
+            <p class="card-text text-light"> This project is very special to me as I have invested lots of time and
+              effort to creat it, also Iit is my very first project using Vanila JavaScript and API's.</p>
+            <a href="https://raphagil.github.io/furniture-project/" class="btn btn-outline-light">Try It Out</a>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Second Project  -->
+      <div class="row gy-3 row-cols-lg2 row-cols-md-2 row-cols-sm-1 g-4">
+        <div class="col-sm">
+          <div class="card shadow h-100">
+            <img src="./images/clock.jpeg" class="card-img-top img-size"
+              alt="This mini-project was created using Vanila JavaScript, HTML and CSS.">
+            <div class="card-body body  p-4 project-2">
+              <h2 class="card-title text-light">Clock App</h2>
+              <p class="card-text text-light">This is a Clock App that I have created using Vanila JavaScript, HTML and
+                CSS. </p>
+              <a href="https://raphagil.github.io/prework-study-guide/" class="btn btn-outline-light">View it Live</a>
+            </div>
+          </div>
+        </div>
+        <!--  Third Project  -->
+        <div class="col-sm">
+          <div class="card shadow h-100">
+            <img src="./images/portfolio1.webp" class="card-img-top img-size"
+              alt="Web page in white background and red and black details in the page for a steak restaurant">
+            <div class="card-body body p-4 project-3">
+              <h2 class="card-title text-light">Porfolio</h2>
+              <p class="card-text text-light"> This was the very first project created during the edX Bootcam </p>
+              <a href="https://preeminent-marigold-ff39e5.netlify.app/" class="btn btn-outline-light">Click Here</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+  </section>
+
+
+
+
+  <footer>
+
+  </footer>
+
+
+
+
+
+
+
+
+
+
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
