Added skills section using bootsrap

--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
       </div>
   </section>
 
+  <section id="my-skills" class="text-center g-col-6">
+    <h3>My Skills</h3>
+    <img src="./images/html (1).png" alt="HTML">
+    <img src="./images/css.png" alt="CSS">
+    <img src="./images/javascript.png" alt="JavaScript">
+    <img src="./images/github2.png" alt="Git">
+    <img src="./images/gitlab.png" alt="GitLab">
+  </section>
+
 
 
 
