About-me section added.

--- a/index.html
+++ b/index.html
@@ -49,14 +49,28 @@
 
   <!--About-Me-->
 
-  <section id="about-me">
+  <section id="about-me" class="p-5">
     <h2>About-Me</h2>
+    <p>After graduating from Anglia Ruskin University in Paramedic Sciences and gaining experience at the London
+      Ambulance Services, I
+      felt the urge to shift gears after working in healthcare for a few years. Encouraged by my partner, who's a
+      senior
+      full-stack developer, and after conducting research, I ventured into web development. Along this journey, I've
+      crafted
+      some practical apps using CSS, HTML, and JavaScript.
+    </p>
+    <p>Beyond tech, I'm an enthusiastic traveler, spending months
+      exploring new destinations and relishing diverse cuisines worldwide. I have traveled to over 30 countries at
+      just 27 years old, which is something I am very proud of. In my free time, I enjoy playing rugby and
+      engaging
+      in bouldering activities.
+    </p>
 
 
   </section>
 
   <!--Work-->
-  <section id="projects">
+  <section id="projects" class="p-2">
     <h2>Work</h2>
 
     <!-- My Projects -->
