target atribute added to the project links

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             <h2 class="card-title body text-light">Weather App</h2>
             <p class="card-text text-light"> This project is very special to me as I have invested lots of time and
               effort to creat it, also Iit is my very first project using Vanila JavaScript and API's.</p>
-            <a href="https://raphagil.github.io/furniture-project/" class="btn btn-outline-light">Try It Out</a>
+            <a href="https://lambent-figolla-996abb.netlify.app" class="btn btn-outline-light" target="_blank">Try It
+              Out</a>
           </div>
         </div>
       </div>
@@ -96,11 +97,12 @@
           <div class="card shadow h-100">
             <img src="./images/clock.jpeg" class="card-img-top img-size"
               alt="This mini-project was created using Vanila JavaScript, HTML and CSS.">
-            <div class="card-body body  p-4 project-2">
+            <div class="card-body body  p-4 project-2 ">
               <h2 class="card-title text-light">Clock App</h2>
               <p class="card-text text-light">This is a Clock App that I have created using Vanila JavaScript, HTML and
                 CSS. </p>
-              <a href="https://raphagil.github.io/prework-study-guide/" class="btn btn-outline-light">View it Live</a>
+              <a href="https://raphagil.github.io/prework-study-guide/" class="btn btn-outline-light"
+                target="_blank">View it Live</a>
             </div>
           </div>
         </div>
@@ -109,10 +111,11 @@
           <div class="card shadow h-100">
             <img src="./images/portfolio1.webp" class="card-img-top img-size"
               alt="Web page in white background and red and black details in the page for a steak restaurant">
-            <div class="card-body body p-4 project-3">
+            <div class="card-body body p-4 project-3 ">
               <h2 class="card-title text-light">Porfolio</h2>
               <p class="card-text text-light"> This was the very first project created during the edX Bootcam </p>
-              <a href="https://preeminent-marigold-ff39e5.netlify.app/" class="btn btn-outline-light">Click Here</a>
+              <a href="https://preeminent-marigold-ff39e5.netlify.app/" class="btn btn-outline-light"
+                target="_blank">Click Here</a>
             </div>
           </div>
         </div>
@@ -121,7 +124,7 @@
   </section>
 
   <section id="my-skills" class="text-center g-col-6">
-    <h3>My Skills</h3>
+    <h2>My Skills</h2>
     <img src="./images/html (1).png" alt="HTML">
     <img src="./images/css.png" alt="CSS">
     <img src="./images/javascript.png" alt="JavaScript">
