cintact me section added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header class="jumbotron pt-3">
     <h2>Hello!</h2>
     <p class="lead display-4"> I'm Ioana Iosub</p>
-    <img src="./images/ioana2.jpg" class="rounded float-right" alt="...">
+    <img src="./images/ioana2.jpg" class="rounded-5 float-right" alt="...">
     <p class="pt-3">Front-End Developer based in London, UK.</p>
     <a class="btn btn-secondary btn-lg" href="#contact-me" role="button">Contact-Me</a>
     <hr class="my-4">
@@ -130,6 +130,13 @@
     <img src="./images/javascript.png" alt="JavaScript">
     <img src="./images/github2.png" alt="Git">
     <img src="./images/gitlab.png" alt="GitLab">
+  </section>
+
+  <section id="contact-me" class="p-5  width: 50% mt-5 mb-5 bg-body rounded">
+    <h2>Contact me</h2>
+    <p>Email:stu.waltham@gmail.com</p>
+    <a href="https://github.com/IIosub">Git GitHub</a>
+
   </section>
 
 
