--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header class="jumbotron pt-3">
     <h2>Hello!</h2>
     <p class="lead display-4"> I'm Ioana Iosub</p>
-    <img src="./images/ioana2.jpg" class="rounded-5 float-right" alt="...">
+    <img src="./images/ioana2.jpg" class="rounded float-right" alt="...">
     <p class="pt-3">Front-End Developer based in London, UK.</p>
     <a class="btn btn-secondary btn-lg" href="#contact-me" role="button">Contact-Me</a>
     <hr class="my-4">
@@ -84,8 +84,7 @@
             <h2 class="card-title body text-light">Weather App</h2>
             <p class="card-text text-light"> This project is very special to me as I have invested lots of time and
               effort to creat it, also Iit is my very first project using Vanila JavaScript and API's.</p>
-            <a href="https://lambent-figolla-996abb.netlify.app" class="btn btn-outline-light" target="_blank">Try It
-              Out</a>
+            <a href="https://raphagil.github.io/furniture-project/" class="btn btn-outline-light">Try It Out</a>
           </div>
         </div>
       </div>
@@ -97,12 +96,11 @@
           <div class="card shadow h-100">
             <img src="./images/clock.jpeg" class="card-img-top img-size"
               alt="This mini-project was created using Vanila JavaScript, HTML and CSS.">
-            <div class="card-body body  p-4 project-2 ">
+            <div class="card-body body  p-4 project-2">
               <h2 class="card-title text-light">Clock App</h2>
               <p class="card-text text-light">This is a Clock App that I have created using Vanila JavaScript, HTML and
                 CSS. </p>
-              <a href="https://raphagil.github.io/prework-study-guide/" class="btn btn-outline-light"
-                target="_blank">View it Live</a>
+              <a href="https://raphagil.github.io/prework-study-guide/" class="btn btn-outline-light">View it Live</a>
             </div>
           </div>
         </div>
@@ -111,11 +109,10 @@
           <div class="card shadow h-100">
             <img src="./images/portfolio1.webp" class="card-img-top img-size"
               alt="Web page in white background and red and black details in the page for a steak restaurant">
-            <div class="card-body body p-4 project-3 ">
+            <div class="card-body body p-4 project-3">
               <h2 class="card-title text-light">Porfolio</h2>
               <p class="card-text text-light"> This was the very first project created during the edX Bootcam </p>
-              <a href="https://preeminent-marigold-ff39e5.netlify.app/" class="btn btn-outline-light"
-                target="_blank">Click Here</a>
+              <a href="https://preeminent-marigold-ff39e5.netlify.app/" class="btn btn-outline-light">Click Here</a>
             </div>
           </div>
         </div>
@@ -124,7 +121,7 @@
   </section>
 
   <section id="my-skills" class="text-center g-col-6">
-    <h2>My Skills</h2>
+    <h3>My Skills</h3>
     <img src="./images/html (1).png" alt="HTML">
     <img src="./images/css.png" alt="CSS">
     <img src="./images/javascript.png" alt="JavaScript">
@@ -132,10 +129,14 @@
     <img src="./images/gitlab.png" alt="GitLab">
   </section>
 
-  <section id="contact-me" class="p-5  width: 50% mt-5 mb-5 bg-body rounded">
+  <section id="contact-me" class="p-5 mt-5  ">
     <h2>Contact me</h2>
-    <p>Email:stu.waltham@gmail.com</p>
-    <a href="https://github.com/IIosub">Git GitHub</a>
+    <a href="mailto:stu.waltham@gmail.com" target="_blank">
+      <img src="/images/email.png" alt="email">
+    </a>
+    <a href="https://github.com/IIosub" target="_blank">
+      <img src="./images/github.png" alt="git">
+    </a>
 
   </section>
 
