shadow and hover added to the  buttons and project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!--Nav-Bar-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg ">
     <a class="navbar-brand" href="#"> <span class="name ps-5">Ioana Iosub</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,7 +73,7 @@
   <section id="projects" class="p-2">
     <h2>Work</h2>
 
-    <!-- My Projects -->
+
     <div class="row mb-3 text themed-grid-col work p-5">
       <div class="col-lg-12 col-md-12 col-sm-12 themed-grid-col d-flex justify-content-center">
 
@@ -84,7 +84,8 @@
             <h2 class="card-title body text-light">Weather App</h2>
             <p class="card-text text-light"> This project is very special to me as I have invested lots of time and
               effort to creat it, also Iit is my very first project using Vanila JavaScript and API's.</p>
-            <a href="https://raphagil.github.io/furniture-project/" class="btn btn-outline-light">Try It Out</a>
+            <a href="https://lambent-figolla-996abb.netlify.app" target="_blank" class="btn btn-outline-light">Try It
+              Out</a>
           </div>
         </div>
       </div>
@@ -100,7 +101,8 @@
               <h2 class="card-title text-light">Clock App</h2>
               <p class="card-text text-light">This is a Clock App that I have created using Vanila JavaScript, HTML and
                 CSS. </p>
-              <a href="https://raphagil.github.io/prework-study-guide/" class="btn btn-outline-light">View it Live</a>
+              <a href="https://world-clock-project2023.netlify.app/" target="_blank" class="btn btn-outline-light">Try
+                It Out</a>
             </div>
           </div>
         </div>
@@ -112,7 +114,8 @@
             <div class="card-body body p-4 project-3">
               <h2 class="card-title text-light">Porfolio</h2>
               <p class="card-text text-light"> This was the very first project created during the edX Bootcam </p>
-              <a href="https://preeminent-marigold-ff39e5.netlify.app/" class="btn btn-outline-light">Click Here</a>
+              <a href="https://iiosub.github.io/ioana-iosub-portfolio/" target="_blank"
+                class="btn btn-outline-light">Click Here</a>
             </div>
           </div>
         </div>
@@ -129,10 +132,10 @@
     <img src="./images/gitlab.png" alt="GitLab">
   </section>
 
-  <section id="contact-me" class="p-5 mt-5  ">
-    <h2>Contact me</h2>
+  <section id="contact-me" class="p-4 mt-5 mx-5 d-flex  ">
+    <h2>Contact me: </h2>
     <a href="mailto:stu.waltham@gmail.com" target="_blank">
-      <img src="/images/email.png" alt="email">
+      <img src="/images/email.png" alt="email" class="mx-3">
     </a>
     <a href="https://github.com/IIosub" target="_blank">
       <img src="./images/github.png" alt="git">
