--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-  <link rel="font-awesome" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
   <link rel="stylesheet" href="./CSS/style.css">
   <title>Bootsrap-Portfolio-Ioana-Iosub</title>
 </head>
@@ -153,10 +151,13 @@
 
 
   <footer>
-    <p class="text-center p-5">- <a class="text-decoration-none" href="https://github.com/IIosub">Open Source</a> by
-      Ioana Iosub - </p>
-    <a href="nav-bar"><i class="fa-solid fa-arrow-up-to-line"></i></a>
+    <p class="text-center p-5">- <a class="text-decoration-none link" href="https://github.com/IIosub">Open Source</a>
+      by
+      Ioana Iosub - <a href="#nav-bar"><img src="/images/back-to-top-img.png" alt="back-to-top-img"></a>
+    </p>
+
   </footer>
+
 
 
 
