--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="col-md text-center mt-5 p-5" id="contact-me">
         <h2>Contact me: </h2>
         <a href="mailto:stu.waltham@gmail.com" target="_blank">
-          <img src="/images/email.png" alt="email" class="mx-3">
+          <img src="./images/email.png" alt="email" class="mx-3">
         </a>
         <a href="https://github.com/IIosub" target="_blank">
           <img src="./images/github.png" alt="git">
@@ -153,7 +153,7 @@
   <footer>
     <p class="text-center p-5">- <a class="text-decoration-none link" href="https://github.com/IIosub">Open Source</a>
       by
-      Ioana Iosub - <a href="#nav-bar"><img src="/images/back-to-top-img.png" alt="back-to-top-img"></a>
+      Ioana Iosub - <a href="#nav-bar"><img src="./images/back-to-top-img.png" alt="back-to-top-img"></a>
     </p>
 
   </footer>
